--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  background-color: #007bff;
+  color: white;
+  border: 1px black solid;
+  padding: 10px 20px;
+  cursor: pointer;
+}
